--- a/SOM_digits.ipynb
+++ b/SOM_digits.ipynb
@@ -934,7 +934,7 @@
    "id": "f782fc80-9dbb-4cd3-8e60-5a03b1a9c727",
    "metadata": {},
    "source": [
-    "So we can see an increase in accuracy with a larger grid."
+    "So we can see in this inctance that a larger grid does not lead to more accurate results."
    ]
   },
   {
